desktop packages visibility problem